Fixing css form page (#73)
* blocked can not block to go under scale 1

* fixing image zoom with new library

* fixing modal picture overlaping z-index

* fix lint

* fix lint

* fix lint

* fix lint

* fix lint

* Fixing progress bar but problem in phone mode

* fix carousel form page

* missing card caroussel error

* fix lint

* fix lint

* fix lint

--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -3,15 +3,44 @@
   display: flex;
   width: 100%;
   height: 100%;
+  align-content: center;
 }
 
 .main-img{
   width: 100%;
-  max-width: 750px;
-  max-height: 950px;
+  max-width: 400px;
+  min-width: 150px;
   height: auto;
-  align-content: center;
   z-index: 1;
+  margin-top: 30px;
+}
+
+@media only screen and (min-width: 1231px) {
+  .carousel-wrapper {
+    position: fixed;
+    display: grid;
+    grid-template-areas:
+      "main main main"
+      ".  carousel  .";
+    grid-template-rows: 60% 30%;
+    align-content: center;
+    justify-content: center;
+    gap: 70px;
+  }
+}
+
+
+@media only screen and (max-width: 1230px) {
+  .carousel-wrapper {
+    display: grid;
+    grid-template-areas:
+      "main main main"
+      ".  carousel  .";
+    grid-template-rows: 60% 30%;
+    align-content: center;
+    justify-content: center;
+    gap: 70px;
+  }
 }
 
 .carousel-wrapper {
@@ -23,43 +52,47 @@
   align-content: center;
 }
 
+
 .carousel {
+  position:static;
   grid-area: carousel;
-  width: 100px;
-  display: flex;
+  width:auto;
+  display:inline-flex;
   align-items: center;
   justify-content: center;
   gap: 8px;
+  z-index: 5;
 }
 .carousel-img {
   border: solid 2px #ccc0;
   display: flex;
   transition: all 750ms linear;
   width: 100%;
+  max-width: 150px;
   height: fit-content;
-  max-height: 130px;
+  max-height: 90px;
   object-fit: contain;
   z-index: 4;
 }
 
 .carousel-img.current {
-  border: solid 2px #ccc;
+  border: solid 4px #bab9b9;
 }
 
 /* Next & previous buttons */
 .prev,
 .next {
   cursor: pointer;
-  width: auto;
-  margin: auto;
-  padding: 16px;
+  max-width: 10px;
+  height: 40px;
   font-weight: bold;
+  padding: 10px;
   font-size: 24px;
   transition: 0.6s ease;
   border-radius: 10px;
   user-select: none;
   z-index: 3;
-  margin-bottom: 15%;
+  margin-top: 50%;
 }
 
 /* Position the "next button" to the right */
